# RAG_LLM

./: .gitignore  2_RAG_RULE.py  3_RAG_JUDGE.py  DB_mongo.py  RAG.py  demo_test.py  one_test.txt  prompt-judge-ch.txt  prompt-rule.txt  prompt_injection_attack.py  pyproject.toml
LLM/: DB_mongo.py  LLM_config.py  LLM_router.py  RAG_AUTO_ATTACK.py  RAG_JUDGE.py  RAG_NORULE.py  RAG_RULE.py
config/: config.json
data/: items.json  person.json
prompt/: prompt-judge-ch.txt  prompt-judge.txt  prompt-norule-ch.txt  prompt-norule.txt  prompt-rule-ch.txt  prompt_template.py  store-rag-role-ch.txt  store-rag-rules-ch.txt  store-rag-rules.txt
src/: 1_RAG_NORULE.py  2_RAG_RULE.py  3_RAG_JUDGE.py  DB_mongo.py  LLM_router.py
web/: WEB_LLM.py
web/static/: config_style.css  log_style.css  script.js  script_NOJUDGE.js  style.css
web/templates/: config.html  index.html  index_NOJUDGE.html  log.html
