[project]
name = "LLM_AI"
version = "0.0.1"
description = "It is a LLM project."
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "langchain>=0.3.20",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.45",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.3.11",
    "pymongo>=4.11.3",
    "python-dotenv>=1.0.1",
]
