[project]
name = "RAG_LLM_Security"
version = "0.0.1"
description = "Use multi agent to protect prompt injection"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "langchain>=0.3.20",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.19",
    "langchain-core>=0.3.45",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.11",
    "ollama>=0.4.7",
    "openai>=1.70.0",
    "pymongo>=4.11.3",
    "python-dotenv>=1.0.1",
]
